added json file and updated notebook

--- a/ds/notebook.ipynb
+++ b/ds/notebook.ipynb
@@ -331,7 +331,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jeelf\\AppData\\Local\\Temp\\ipykernel_92436\\170747954.py:3: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "C:\\Users\\jeelf\\AppData\\Local\\Temp\\ipykernel_90556\\170747954.py:3: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  df['datetime'] = pd.to_datetime(df['full_date'] + ' ' + df['time'] )\n"
      ]
     }
@@ -1342,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "id": "255228f6",
    "metadata": {},
    "outputs": [],
@@ -1363,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 40,
    "id": "0b565227",
    "metadata": {},
    "outputs": [],
@@ -1378,7 +1378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 41,
    "id": "0ba3762e",
    "metadata": {},
    "outputs": [
@@ -1386,7 +1386,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jeelf\\AppData\\Local\\Temp\\ipykernel_92436\\1141753654.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\jeelf\\AppData\\Local\\Temp\\ipykernel_90556\\1141753654.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1400,7 +1400,7 @@
        "Text(0, 0.5, 'Count Of Users')"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1427,7 +1427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 42,
    "id": "1bd2b97b",
    "metadata": {},
    "outputs": [
@@ -1435,7 +1435,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jeelf\\AppData\\Local\\Temp\\ipykernel_92436\\2628990834.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\jeelf\\AppData\\Local\\Temp\\ipykernel_90556\\2628990834.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1449,7 +1449,7 @@
        "Text(0, 0.5, 'Count Of Users')"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1476,11 +1476,297 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7d9d3df6",
+   "execution_count": 43,
+   "id": "061b968e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>weekday</th>\n",
+       "      <th>sub_mood</th>\n",
+       "      <th>activities</th>\n",
+       "      <th>mood</th>\n",
+       "      <th>mood_encoded</th>\n",
+       "      <th>week</th>\n",
+       "      <th>hour</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>datetime</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2021-12-04 21:52:00</th>\n",
+       "      <td>Monday</td>\n",
+       "      <td>angry</td>\n",
+       "      <td>[reading ,  learning  ,  fasting  ,  walk ,  m...</td>\n",
+       "      <td>Awful</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2021-11-29/2021-12-05</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-03 21:01:00</th>\n",
+       "      <td>Friday</td>\n",
+       "      <td>focused</td>\n",
+       "      <td>[reading ,  learning  ,  prayer ,  fasting  , ...</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2021-11-29/2021-12-05</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-02 21:10:00</th>\n",
+       "      <td>Friday</td>\n",
+       "      <td>worried</td>\n",
+       "      <td>[reading ,  learning  ,  prayer ,  fasting  , ...</td>\n",
+       "      <td>Bad</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2021-11-29/2021-12-05</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-01 21:46:00</th>\n",
+       "      <td>Tuesday</td>\n",
+       "      <td>Cool</td>\n",
+       "      <td>[learning  ,  walk ,  streaming  ,  youtube , ...</td>\n",
+       "      <td>Amazing</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2021-11-29/2021-12-05</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-11-04 00:21:00</th>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>wondering</td>\n",
+       "      <td>[reading ,  learning  ,  prayer ,  fasting  , ...</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2021-11-01/2021-11-07</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     weekday   sub_mood  \\\n",
+       "datetime                                  \n",
+       "2021-12-04 21:52:00   Monday      angry   \n",
+       "2021-12-03 21:01:00   Friday   focused    \n",
+       "2021-12-02 21:10:00   Friday   worried    \n",
+       "2021-12-01 21:46:00  Tuesday       Cool   \n",
+       "2021-11-04 00:21:00   Sunday  wondering   \n",
+       "\n",
+       "                                                            activities  \\\n",
+       "datetime                                                                 \n",
+       "2021-12-04 21:52:00  [reading ,  learning  ,  fasting  ,  walk ,  m...   \n",
+       "2021-12-03 21:01:00  [reading ,  learning  ,  prayer ,  fasting  , ...   \n",
+       "2021-12-02 21:10:00  [reading ,  learning  ,  prayer ,  fasting  , ...   \n",
+       "2021-12-01 21:46:00  [learning  ,  walk ,  streaming  ,  youtube , ...   \n",
+       "2021-11-04 00:21:00  [reading ,  learning  ,  prayer ,  fasting  , ...   \n",
+       "\n",
+       "                        mood  mood_encoded                   week  hour  \n",
+       "datetime                                                                 \n",
+       "2021-12-04 21:52:00    Awful             1  2021-11-29/2021-12-05    21  \n",
+       "2021-12-03 21:01:00     Good             4  2021-11-29/2021-12-05    21  \n",
+       "2021-12-02 21:10:00      Bad             2  2021-11-29/2021-12-05    21  \n",
+       "2021-12-01 21:46:00  Amazing             5  2021-11-29/2021-12-05    21  \n",
+       "2021-11-04 00:21:00   Normal             3  2021-11-01/2021-11-07     0  "
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1ccc35e",
+   "metadata": {},
+   "source": [
+    "## JSON Format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "c52fdc87",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "JSON export completed successfully!\n"
+     ]
+    }
+   ],
+   "source": [
+    "## JSON Format — FINAL EXPORT (safe for SE team)\n",
+    "\n",
+    "# 1. Make a copy so analysis columns don't affect final dataset\n",
+    "df_export = df.copy()\n",
+    "\n",
+    "# 2. Drop 'week' because it is a Period object (not JSON serializable)\n",
+    "df_export = df_export.drop(columns=['week'], errors='ignore')\n",
+    "\n",
+    "# 3. Reset index so datetime becomes a column\n",
+    "df_export = df_export.reset_index()\n",
+    "\n",
+    "# 4. Convert datetime to a string (JSON safe)\n",
+    "df_export['datetime'] = df_export['datetime'].astype(str)\n",
+    "\n",
+    "# 5. Make sure activities is a list (JSON-safe)\n",
+    "df_export['activities'] = df_export['activities'].apply(\n",
+    "    lambda x: list(x) if isinstance(x, list) else []\n",
+    ")\n",
+    "\n",
+    "# 6. Export to JSON\n",
+    "df_export.to_json(\"final_mood_dataset.json\", orient=\"records\", indent=4)\n",
+    "\n",
+    "print(\"JSON export completed successfully!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "e7a24859",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>datetime</th>\n",
+       "      <th>weekday</th>\n",
+       "      <th>sub_mood</th>\n",
+       "      <th>activities</th>\n",
+       "      <th>mood</th>\n",
+       "      <th>mood_encoded</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021-12-04 21:52:00</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>angry</td>\n",
+       "      <td>[reading ,  learning  ,  fasting  ,  walk ,  m...</td>\n",
+       "      <td>Awful</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2021-12-03 21:01:00</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>focused</td>\n",
+       "      <td>[reading ,  learning  ,  prayer ,  fasting  , ...</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2021-12-02 21:10:00</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>worried</td>\n",
+       "      <td>[reading ,  learning  ,  prayer ,  fasting  , ...</td>\n",
+       "      <td>Bad</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2021-12-01 21:46:00</td>\n",
+       "      <td>Tuesday</td>\n",
+       "      <td>Cool</td>\n",
+       "      <td>[learning  ,  walk ,  streaming  ,  youtube , ...</td>\n",
+       "      <td>Amazing</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2021-11-04 00:21:00</td>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>wondering</td>\n",
+       "      <td>[reading ,  learning  ,  prayer ,  fasting  , ...</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             datetime  weekday   sub_mood  \\\n",
+       "0 2021-12-04 21:52:00   Monday      angry   \n",
+       "1 2021-12-03 21:01:00   Friday   focused    \n",
+       "2 2021-12-02 21:10:00   Friday   worried    \n",
+       "3 2021-12-01 21:46:00  Tuesday       Cool   \n",
+       "4 2021-11-04 00:21:00   Sunday  wondering   \n",
+       "\n",
+       "                                          activities     mood  mood_encoded  \n",
+       "0  [reading ,  learning  ,  fasting  ,  walk ,  m...    Awful             1  \n",
+       "1  [reading ,  learning  ,  prayer ,  fasting  , ...     Good             4  \n",
+       "2  [reading ,  learning  ,  prayer ,  fasting  , ...      Bad             2  \n",
+       "3  [learning  ,  walk ,  streaming  ,  youtube , ...  Amazing             5  \n",
+       "4  [reading ,  learning  ,  prayer ,  fasting  , ...   Normal             3  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df_json = pd.read_json(\"final_mood_dataset.json\")\n",
+    "display(df_json.head())"
+   ]
   }
  ],
  "metadata": {
